Style adjustment of the Skills Animated component on small screens was not displayed correctly

--- a/src/styles/SkillsAnimated.css
+++ b/src/styles/SkillsAnimated.css
@@ -1,9 +1,9 @@
 .SkillsAnimated {
   background-color: var(--bg-secondary);
   overflow: hidden;
-  height: 100px;
+  height: 110px;
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
+  grid-template-columns: repeat(8, minmax(30px,1fr));
   width: 100%;
   position: relative;
 
@@ -40,15 +40,22 @@
   top: -22px;
 }
 
+.wave-container {
+  position: relative;
+  top: 31%;
+  margin: 0 auto;
+
+
+}
+
+
 .wave {
   position: relative;
-
   margin: 0 auto;
-  top: 20%;
   opacity: 0;
   align-self: center;
-  width: 60px;
-  height: 60px;
+  width: 100%;
+  height: 100%;
   border: var(--text-secondary) 7px solid;
   border-radius: 100%;
   animation-name: ripple;
@@ -69,13 +76,14 @@
     height: 50px;
     border-width: 1px;
     opacity: 0;
+    
   }
 }
 
 
 @keyframes drip {
   to {
-    top: 40%;
+    top: 30%;
   }
 }
 
@@ -85,9 +93,9 @@
   opacity: 0;
   position: absolute;
   top: 0;
-  left: calc(50% - 25px);
-  width: 50px;
-  height: 50px;
+  left: calc(50% - 50%);
+  width: 100%;
+  height: 100%;
   background-color: var(--transparent-600);
   border-radius: 100%;
   display: flex;
@@ -97,13 +105,7 @@
   animation-delay: 1000ms;
 }
 
-.wave-container {
-  position: relative;
-  top: 20%;
-  margin: 0 auto;
 
-
-}
 
 @keyframes fade-in {
   to {
